<resources>
    <string name="save">SAVE</string>

    <string name="app_name">PaQueue</string>
    <string name="title_queue">Queue</string>
    <string name="title_players">Players</string>
    <string name="title_settings">Settings</string>
    <string name="title_queue_options">Queue Options</string>
    <string name="player_name">Name</string>
    <string name="hide_input">Hide Input Fields</string>
    <string name="show_input">Show Input Fields</string>

    <string name="no_players">No Players available</string>
    <string name="add_player">Add Player</string>
    <string name="delete_player">Delete Player</string>
    <string name="options">Options</string>
    <string name="edit_player">Edit</string>
    <string name="rest_player">Rest</string>
    <string name="ready_player">Ready</string>
    <string name="done_edit_player">Done Editing Player</string>
    <string name="create_queue">Create Queue</string>
    <string name="create_set">Create Set</string>

    <string name="no_queue">No Queue list available</string>
    <string name="zero">0</string>
    <string name="subtract_courts">Subtract Courts</string>
    <string name="add_courts">Add Courts</string>
    <string name="num_courts">Courts</string>
    <string name="shuffle">Shuffle</string>
    <string name="delete_queue">Delete Queue</string>
    <string name="done_queue">Done Queue</string>
    <string name="clear_queue">CLEAR QUEUE</string>

    <string name="reset_games">Reset Games</string>
    <string name="queue_options_label">Queue Options</string>
    <string name="open_queue">Open</string>
    <string name="by_level_queue">By Level</string>
    <string name="mixed_queue">Mixed</string>
    <string name="open_desc">No restrictions to player matching.\nPlayers can potentially be matched with anyone as long as they are evenly matched with their opponents.</string>
    <string name="by_level_desc">Players are grouped by their levels.\nIf there are less than 4 players for a certain level, the \"Open\" queueing style will be chosen by default.</string>
    <string name="mixed_desc">A combination of \"Open\" and \"By Level\".</string>
    <string name="strictness">\"By Level\" Level Strictness</string>
    <string name="level_strict">Strict - players can only play with the same level</string>
    <string name="level_lax">Lax - level 2 and 3 players can play with each other; level 1 players are separated</string>
    <string name="mixed_frequency">For a specified number of games,\nselect how many \"Open\" and \"By Level\" games should be set.</string>
    <string name="specify_games">Please specify number of games:</string>
    <string name="num_open_label">How many \"Open\" games per %n games?</string>
    <string name="num_by_level_label">How many \"By Level\" games per %n games?</string>
</resources>
