<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.queue.QueueFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvQueues"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnQueueShowInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageButton
        android:id="@+id/imgBtnQueueShowInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/show_input"
        android:src="@drawable/ic_arrow_up"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/layoutAddQueue"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/imgBtnQueueHideInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/hide_input"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toTopOf="@+id/layoutAddQueue"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAddQueue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewCourtsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/textViewNumCourts"
            android:text="@string/num_courts"
            app:layout_constraintBottom_toTopOf="@id/textViewNumCourts"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imgBtnSubNumCourts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/subtract_courts"
            android:src="@drawable/ic_subtract"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewNumCourts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/zero"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBtnSubNumCourts" />

        <ImageButton
            android:id="@+id/imgBtnAddNumCourts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/add_courts"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewNumCourts" />

        <ToggleButton
            android:id="@+id/toggleShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/toggle_selector"
            android:textColor="@color/inverse_toggle_selector"
            android:textOff="@string/shuffle"
            android:textOn="@string/shuffle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnGenQueue"
            app:layout_constraintStart_toEndOf="@+id/imgBtnAddNumCourts" />

        <Button
            android:id="@+id/btnGenQueue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/start_queue"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>